Fixed logo container (.brand) overlapping the top menu region (login link, basket link, ...).

--- a/sass/components/_brand.scss
+++ b/sass/components/_brand.scss
@@ -136,7 +136,7 @@ nav.holder {
   @include mq($bp-tablet-s) {
     @include add-grid(24);
     top: 0px;
-    width: 100%;
+    width: 50%;
     z-index: $z-gamma;
   }
 }
